JSR 292 assert(result == cpce->f1()) failed: expected result for assembly code

XMLWordPrintable

    • b15
    • generic
    • generic
    • Verified

        JSR 292 tests are failing with:

        Java HotSpot(TM) 64-Bit Server VM warning: JSR 292 method handle code is mismatched to this JVM. Disabling support.
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/interpreterRuntime.cpp:144
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (.../source/src/share/vm/interpreter/interpreterRuntime.cpp:144), pid=28478, tid=140602251757904
        # assert(result == cpce->f1()) failed: expected result for assembly code
        #
        # JRE version: 7.0-b142
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (21.0-b13-internal-...-fastdebug compiled mode linux-amd64 )

              Assignee:
              Tom Rodriguez
              Reporter:
              Kirill Shirokov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: