7046732: JSR 292 assert(result == cpce->f1()) failed: expected result for assembly code

Reviewed-by: kvn, iveresov, jrose